--- a/style.css
+++ b/style.css
@@ -202,73 +202,67 @@ main {
   text-decoration: underline;
 }
 
-/* Testimonials */
-/* @import url(https://fonts.googleapis.com/css?family=Lato);
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css); */
-
 .review {
-  position: relative;
-
-}
-
-.snip1574 {
   position: relative;
   display: inline-block;
   overflow: hidden;
   margin: 10px;
-  min-width: 250px;
-  max-width: 310px;
+  min-width: 100px;
+  max-width: 320px;
   width: 100%;
-  background-color: #000000;
+  background-color:  #000000;
   color: #ffffff;
   text-align: center;
   font-size: 16px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
 
-.snip1574 * {
+.review * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.snip1574 img {
+.review img {
   max-width: 100%;
+  opacity: 0.3;
   vertical-align: top;
+}
+
+.review img:hover {
   opacity: 0.7;
 }
 
-.snip1574 figcaption {
+.review figcaption {
   position: absolute;
-  top: 0;
+  top: 150px;
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 80px 10% 15%;
+  padding : 80px 10% 15%;
 }
 
-.snip1574 figcaption:before {
+.review figcaption::before{
   font-family: 'FontAwesome';
-  content: "\201C";
+  content: '\f10d';
+  font-size: 180px;
   position: absolute;
-  font-size: 170px;
-  opacity: 0.35;
-  font-style: normal;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
   top: 0px;
   left: 50%;
+  opacity: 0.3;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
-.snip1574 blockquote {
+
+.review blockquote {
   padding: 0;
   margin: 0;
-  font-style: italic;
   font-size: 1.2em;
+  font-style: italic;
 }
 
-.snip1574 h3 {
-  font-family: 'Oswald';
+
+.review h3 {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 400;
@@ -276,10 +270,3 @@ main {
   margin: 3px 0;
 }
 
-.snip1574 h5 {
-  font-weight: 400;
-  margin: 0;
-  text-transform: uppercase;
-  color: #bbb;
-  letter-spacing: 1px;
-}
