--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 }
 
 body {
-  /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
-  /* font-family: 'Caveat', cursive; */
   font-family: 'Zen Kurenaido', sans-serif;
   font-size: 1.5rem;
   line-height: 1.5;
@@ -18,11 +16,10 @@ header {
   display: grid;
   grid-template-columns: 50% 50%; 
   height: 100%;
-
 }
 
-.container {
-  padding: 10px 50px;
+.main-container {
+  padding: 10px 50px 0;
 }
 
 #logo img {
@@ -47,7 +44,8 @@ h2 {
   padding: 20px;
 }
 
-#learn-more .btn {
+#learn-more .btn,
+#btn-get-support {
   width: 200px;
   background-color: #e6ad3a;
 }
@@ -69,10 +67,12 @@ h2 {
 
 /* give the link a linear bg gradient with a stop btwn 2 colors at 50% */
 #socials a {
-  background-image: linear-gradient(90deg, #e6ad3a, #e6ad3a 50%, #000 50%
-  );
+  /* background-image: linear-gradient(90deg, #e6ad3a, #e6ad3a 50%, #000 50%
+  ); */
 
   /* make the bg double the link's width and position to the left so only one of gradient colors shows */
+  background-color: #e6ad3a;
+  color:#000;
   background-size: 200% 100%;
   background-position: -100%;
   display: inline-block;
@@ -188,11 +188,12 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
-  margin: 70px 0 70px 0; 
+  margin: 70px 0 0 0; 
 }
 
 #about-us img,
-.client-img {
+.client-img,
+#get-support img {
   width: 100%;
   height: 100%;  
   object-fit: cover;
@@ -202,13 +203,49 @@ main {
   text-decoration: underline;
 }
 
+#facts {
+  text-align: center;
+  background-color: #2e758b;
+  color: #fff;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#facts-intro {
+  font-size: small;
+}
+
+#facts-stats {
+  font-size: larger;
+}
+
+#get-support {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  margin: 70px 0 0 0; 
+}
+
+#get-support-text h2 {
+  font-size:larger;
+}
+
+#review-container {
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
+}
+
 .review {
   position: relative;
   display: inline-block;
   overflow: hidden;
-  margin: 10px;
+  /* margin: 20px; */
   min-width: 100px;
-  max-width: 320px;
+  max-width: 340px;
   width: 100%;
   background-color:  #000000;
   color: #ffffff;
@@ -253,14 +290,12 @@ main {
   transform: translateX(-50%);
 }
 
-
 .review blockquote {
   padding: 0;
   margin: 0;
   font-size: 1.2em;
   font-style: italic;
 }
-
 
 .review h3 {
   text-transform: uppercase;
@@ -269,4 +304,7 @@ main {
   line-height: 24px;
   margin: 3px 0;
 }
+
+
+
 
