--- a/style.css
+++ b/style.css
@@ -18,12 +18,16 @@ header {
   height: 100%;
 }
 
-.main-container {
-  padding: 10px 50px 0;
-}
+/* .main-container {
+  padding: 10px 40px 0 40px;
+} */
 
 #logo img {
   width: 20%;
+}
+
+#logo-text {
+  padding: 0 40px 0 40px;
 }
 
 #left .title,
@@ -37,26 +41,112 @@ h2 {
   text-transform: capitalize;
 }
 
-#learn-more {
+#learn-more-div {
   display: flex;
   justify-content: center;
-  gap: 20px;
   padding: 20px;
 }
 
-#learn-more .btn,
-#btn-get-support {
+
+/* #learn-more-div .btn, */
+/* #btn-get-support {
   width: 200px;
   background-color: #e6ad3a;
-}
+} */
 
-#btn-works:hover, 
-#btn-schedule:hover {
-  background-color: #2e758b;
-  color:#fff;
-  border: 2px solid #e6ad3a;
+/* From uiverse.io */
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+ }
+
  
-}
+ button.learn-more {
+  width: 17rem;
+  height: auto;
+ }
+ 
+ button.learn-more .circle {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #e6ad3a;
+  border-radius: 1.625rem;
+ }
+ 
+ button.learn-more .circle .icon {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+ }
+ 
+ button.learn-more .circle .icon.arrow {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+ }
+ 
+ button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: "";
+  top: -0.29rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fff;
+  border-right: 0.125rem solid #fff;
+  transform: rotate(45deg);
+ }
+ 
+ button.learn-more .button-text {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #282936;
+  font-weight: 700;
+  line-height: 2.0;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: underline;
+ }
+ 
+ button:hover .circle {
+  width: 100%;
+ }
+ 
+ button:hover .circle .icon.arrow {
+  background: #fff;
+  transform: translate(1rem, 0);
+ }
+ 
+ button:hover .button-text {
+  color: #fff;
+ }
+
+ /* end of the buttons code*/
+
 
 #socials {
   display: flex;
@@ -64,43 +154,13 @@ h2 {
   padding-top: 10px;
 }
 
-
-/* give the link a linear bg gradient with a stop btwn 2 colors at 50% */
 #socials a {
-  /* background-image: linear-gradient(90deg, #e6ad3a, #e6ad3a 50%, #000 50%
-  ); */
-
-  /* make the bg double the link's width and position to the left so only one of gradient colors shows */
-  background-color: #e6ad3a;
-  color:#000;
-  background-size: 200% 100%;
-  background-position: -100%;
-  display: inline-block;
-  padding: 5px 0;
-  position: relative;
-  /* -webkit-background-clip: text; */
-  -webkit-text-fill-color: transparent;
-  transition: all 0.3s ease-in-out;
-}
-
-#socials a:before {
-  content: '';
-  background: #e6ad3a;
-  display: block;
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 0;
-  height: 3px;
-  transition: all 0.3s ease-in-out;
+ color: #000;
+ text-decoration: none;
 }
 
 #socials a:hover {
- background-position: 0;
-}
-
-#socials a:hover::before {
-  width:100%;
+  color:#e6ad3a;
 }
 
 #right { 
@@ -160,6 +220,7 @@ nav a:hover {
 main {
   height: 100vh;
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 #main-div {
@@ -168,6 +229,7 @@ main {
   column-gap: 30px;
   height: 100px;
   margin-top: 10px;
+  padding-bottom: 50px;
 }
 
 #main-div img {
@@ -188,7 +250,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
-  margin: 70px 0 0 0; 
+  padding-top: 50px; 
 }
 
 #about-us img,
@@ -305,6 +367,47 @@ main {
   margin: 3px 0;
 }
 
+.fa-instagram,
+.fa-envelope {
+  color: #2875a6; 
+}
 
+footer {
+  background-color: #e6ad3a; 
+  padding: 40px 20px 20px 40px;
+}
 
+#footer {
+  display: grid;
+  grid-template-columns: 31% 23% 23% 23%; 
+  
+  /* color: rgba(135,134,138,255); */
+}
+
+#footer-mama-kazaliwa h2 {
+  font-size:larger;
+}
+
+#footer-mama-kazaliwa img {
+  width: 25%;
+} 
+
+#footer-mama-kazaliwa h2,
+#footer-mama-kazaliwa #footer-socials {
+  padding-left: 30px;
+}
+
+.fa-instagram {
+  padding-right: 20px;
+}
+
+#footer-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+#footer-details-left {
+  display: flex;
+  justify-content: space-between;
+}
 
